--- a/req-cuti.html
+++ b/req-cuti.html
@@ -39,12 +39,15 @@ async function cekNIK() {
   btnForm.style.display = "none";
 
   try {
-    // 🔹 Pastikan NIK dikirim sebagai parameter
+    console.log("Mengirim NIK:", nik);
+
+    // 🔹 Kirim parameter NIK ke API
     const response = await fetch(`https://script.google.com/macros/s/AKfycbz2Vcne0S9qUcVGCNan2ChqwcPdcqKbHVh3RdnCdK5e-UktyDu-uxVO_5uGccRQtctU/exec?nik=${nik}`);
+    
     const data = await response.json();
+    console.log("Data dari API:", data);
 
-    console.log("Data dari API:", data); // debug
-
+    // 🔹 Periksa apakah data memiliki nama & group
     if (data.nama && data.group) {
       hasil.innerHTML = `
         ✅ Nama: <strong>${data.nama}</strong><br>
@@ -69,7 +72,10 @@ function lanjutForm() {
   const nik = encodeURIComponent(btn.dataset.nik);
   const group = encodeURIComponent(btn.dataset.group);
 
+  // Link Google Form kamu
   const formURL = "https://docs.google.com/forms/d/e/1FAIpQLSeoJsdvN7htQSgUjDbT6I5StR1y0zLyFXM46-ZuLvO80D89bQ/viewform";
+
+  // Prefill entry id masing-masing
   const prefillURL = `${formURL}?entry.448590851=${nik}&entry.1346383944=${nama}&entry.1841657487=${group}`;
 
   window.location.href = prefillURL;
