--- a/req-cuti.html
+++ b/req-cuti.html
@@ -2,7 +2,7 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Form Cek NIK dan Pengajuan Cuti</title>
+  <title>Form INPUT NIK Untuk Pengajuan Libur atau Cuti</title>
   <style>
     body { font-family: Arial, sans-serif; padding: 30px; background-color: #f2f2f2; }
     label, input, button { display: block; margin-top: 15px; }
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-<h2>Form Cek NIK dan Pengajuan Cuti</h2>
+<h2>Form Cek NIK</h2>
 
 <label for="nik">Masukkan NIK:</label>
 <input type="text" id="nik" placeholder="Contoh: 2012022847" />
@@ -84,3 +84,4 @@ function lanjutForm() {
 
 </body>
 </html>
+
