--- a/req-cuti.html
+++ b/req-cuti.html
@@ -21,7 +21,7 @@
 
 <div id="hasil"></div>
 
-<button id="formCutiBtn" onclick="lanjutForm()">Lanjut ke Form Cuti</button>
+<button id="formCutiBtn" onclick="lanjutForm()">Lanjut ke Form REQUEST</button>
 
 <script>
 async function cekNIK() {
@@ -84,4 +84,5 @@ function lanjutForm() {
 
 </body>
 </html>
+
 
