--- a/req-cuti.html
+++ b/req-cuti.html
@@ -2,26 +2,115 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Form INPUT NIK Untuk Pengajuan Libur atau Cuti</title>
+  <title>Form INPUT NIK Untuk Pengajuan Libur / Cuti</title>
   <style>
-    body { font-family: Arial, sans-serif; padding: 30px; background-color: #f2f2f2; }
-    label, input, button { display: block; margin-top: 15px; }
-    #hasil { margin-top: 20px; font-weight: bold; }
-    #formCutiBtn { margin-top: 20px; display: none; }
+    /* Background & font */
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background: linear-gradient(135deg, #6dd5ed, #2193b0);
+    }
+
+    /* Card container */
+    .container {
+      background: #fff;
+      padding: 40px 50px;
+      border-radius: 15px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+      text-align: center;
+      width: 400px;
+      max-width: 90%;
+      animation: fadeIn 0.6s ease-in-out;
+    }
+
+    h2 {
+      margin-bottom: 20px;
+      color: #333;
+    }
+
+    label {
+      display: block;
+      margin-bottom: 8px;
+      text-align: left;
+      font-weight: bold;
+      color: #444;
+    }
+
+    input {
+      width: 100%;
+      padding: 12px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 16px;
+      margin-bottom: 20px;
+      box-sizing: border-box;
+      transition: border 0.3s;
+    }
+
+    input:focus {
+      border-color: #2193b0;
+      outline: none;
+    }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      margin-top: 10px;
+      font-size: 16px;
+      font-weight: bold;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    button:hover {
+      opacity: 0.9;
+    }
+
+    .btn-cek {
+      background: #2193b0;
+      color: #fff;
+    }
+
+    .btn-form {
+      background: #28a745;
+      color: #fff;
+      display: none;
+    }
+
+    #hasil {
+      margin-top: 20px;
+      font-weight: bold;
+      color: #333;
+      min-height: 30px;
+    }
+
+    /* Animasi */
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
   </style>
 </head>
 <body>
 
-<h2>Form Cek NIK</h2>
+  <div class="container">
+    <h2>Form Cek NIK</h2>
 
-<label for="nik">Masukkan NIK:</label>
-<input type="text" id="nik" placeholder="Contoh: 2012022847" />
+    <label for="nik">Masukkan NIK:</label>
+    <input type="text" id="nik" placeholder="Contoh: 2012022847" />
 
-<button onclick="cekNIK()">Cek Nama & Group</button>
+    <button class="btn-cek" onclick="cekNIK()">🔍 Cek Nama & Group</button>
 
-<div id="hasil"></div>
+    <div id="hasil"></div>
 
-<button id="formCutiBtn" onclick="lanjutForm()">Lanjut ke Form REQUEST</button>
+    <button id="formCutiBtn" class="btn-form" onclick="lanjutForm()">➡️ Lanjut ke Form REQUEST</button>
+  </div>
 
 <script>
 async function cekNIK() {
@@ -43,17 +132,15 @@ async function cekNIK() {
 
     // 🔹 Kirim parameter NIK ke API
     const response = await fetch(`https://script.google.com/macros/s/AKfycbz2Vcne0S9qUcVGCNan2ChqwcPdcqKbHVh3RdnCdK5e-UktyDu-uxVO_5uGccRQtctU/exec?nik=${nik}`);
-    
     const data = await response.json();
     console.log("Data dari API:", data);
 
-    // 🔹 Periksa apakah data memiliki nama & group
     if (data.nama && data.group) {
       hasil.innerHTML = `
         ✅ Nama: <strong>${data.nama}</strong><br>
         📌 Group: <strong>${data.group}</strong>
       `;
-      btnForm.style.display = "inline-block";
+      btnForm.style.display = "block";
       btnForm.dataset.nama = data.nama;
       btnForm.dataset.nik = nik;
       btnForm.dataset.group = data.group;
@@ -72,10 +159,7 @@ function lanjutForm() {
   const nik = encodeURIComponent(btn.dataset.nik);
   const group = encodeURIComponent(btn.dataset.group);
 
-  // Link Google Form kamu
   const formURL = "https://docs.google.com/forms/d/e/1FAIpQLSeoJsdvN7htQSgUjDbT6I5StR1y0zLyFXM46-ZuLvO80D89bQ/viewform";
-
-  // Prefill entry id masing-masing
   const prefillURL = `${formURL}?entry.448590851=${nik}&entry.1346383944=${nama}&entry.1841657487=${group}`;
 
   window.location.href = prefillURL;
@@ -84,5 +168,3 @@ function lanjutForm() {
 
 </body>
 </html>
-
-
