--- a/req-cuti.html
+++ b/req-cuti.html
@@ -2,9 +2,8 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Form INPUT NIK Untuk Pengajuan Libur / Cuti</title>
+  <title>INPUT NIK SEBELUM REQUEST</title>
   <style>
-    /* Background & font */
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
@@ -15,21 +14,29 @@
       background: linear-gradient(135deg, #6dd5ed, #2193b0);
     }
 
-    /* Card container */
     .container {
       background: #fff;
       padding: 40px 50px;
       border-radius: 15px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
       text-align: center;
-      width: 400px;
-      max-width: 90%;
+      width: 420px;
+      max-width: 95%;
       animation: fadeIn 0.6s ease-in-out;
     }
 
+    .logo {
+      width: 100px;
+      margin-bottom: 15px;
+    }
+
     h2 {
-      margin-bottom: 20px;
-      color: #333;
+      margin-bottom: 25px;
+      font-size: 22px;
+      font-weight: bold;
+      background: linear-gradient(90deg, #2193b0, #6dd5ed);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
 
     label {
@@ -54,6 +61,7 @@
     input:focus {
       border-color: #2193b0;
       outline: none;
+      box-shadow: 0 0 5px rgba(33, 147, 176, 0.5);
     }
 
     button {
@@ -65,11 +73,7 @@
       border: none;
       border-radius: 8px;
       cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    button:hover {
-      opacity: 0.9;
+      transition: all 0.3s;
     }
 
     .btn-cek {
@@ -77,10 +81,18 @@
       color: #fff;
     }
 
+    .btn-cek:hover {
+      background: #18657a;
+    }
+
     .btn-form {
       background: #28a745;
       color: #fff;
       display: none;
+    }
+
+    .btn-form:hover {
+      background: #1e7e34;
     }
 
     #hasil {
@@ -90,7 +102,6 @@
       min-height: 30px;
     }
 
-    /* Animasi */
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(-20px); }
       to { opacity: 1; transform: translateY(0); }
@@ -100,7 +111,10 @@
 <body>
 
   <div class="container">
-    <h2>Form Cek NIK</h2>
+    <!-- Kalau ada logo, ganti src="LOGO.png" -->
+    <!-- <img src="LOGO.png" alt="Logo" class="logo"> -->
+
+    <h2>INPUT NIK SEBELUM REQUEST</h2>
 
     <label for="nik">Masukkan NIK:</label>
     <input type="text" id="nik" placeholder="Contoh: 2012022847" />
@@ -128,12 +142,8 @@ async function cekNIK() {
   btnForm.style.display = "none";
 
   try {
-    console.log("Mengirim NIK:", nik);
-
-    // 🔹 Kirim parameter NIK ke API
     const response = await fetch(`https://script.google.com/macros/s/AKfycbz2Vcne0S9qUcVGCNan2ChqwcPdcqKbHVh3RdnCdK5e-UktyDu-uxVO_5uGccRQtctU/exec?nik=${nik}`);
     const data = await response.json();
-    console.log("Data dari API:", data);
 
     if (data.nama && data.group) {
       hasil.innerHTML = `
