--- a/req-cuti.html
+++ b/req-cuti.html
@@ -5,152 +5,176 @@
   <title>INPUT NIK SEBELUM REQUEST</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #4facfe, #00f2fe);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      margin: 0;
+      background: linear-gradient(135deg, #6dd5ed, #2193b0);
     }
+
     .container {
       background: #fff;
-      padding: 40px;
+      padding: 40px 50px;
       border-radius: 15px;
       box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      width: 400px;
       text-align: center;
+      width: 420px;
+      max-width: 95%;
+      animation: fadeIn 0.6s ease-in-out;
     }
+
     .logo {
       width: 100px;
       margin-bottom: 15px;
     }
+
     h2 {
-      margin: 10px 0 20px;
-      color: #333;
+      margin-bottom: 25px;
+      font-size: 22px;
+      font-weight: bold;
+      background: linear-gradient(90deg, #2193b0, #6dd5ed);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
+
     label {
       display: block;
-      margin: 15px 0 5px;
-      font-weight: bold;
+      margin-bottom: 8px;
       text-align: left;
+      font-weight: bold;
+      color: #444;
     }
+
     input {
       width: 100%;
       padding: 12px;
-      border-radius: 8px;
       border: 1px solid #ccc;
+      border-radius: 8px;
+      font-size: 16px;
+      margin-bottom: 20px;
       box-sizing: border-box;
-      font-size: 14px;
+      transition: border 0.3s;
     }
+
+    input:focus {
+      border-color: #2193b0;
+      outline: none;
+      box-shadow: 0 0 5px rgba(33, 147, 176, 0.5);
+    }
+
     button {
-      margin-top: 20px;
-      padding: 12px;
       width: 100%;
-      background-color: #0097a7;
-      color: white;
+      padding: 12px;
+      margin-top: 10px;
+      font-size: 16px;
+      font-weight: bold;
       border: none;
       border-radius: 8px;
       cursor: pointer;
-      font-size: 16px;
-      font-weight: bold;
-      transition: background 0.3s ease;
+      transition: all 0.3s;
     }
-    button:hover {
-      background-color: #00796b;
+
+    .btn-cek {
+      background: #2193b0;
+      color: #fff;
     }
+
+    .btn-cek:hover {
+      background: #18657a;
+    }
+
+    .btn-form {
+      background: #28a745;
+      color: #fff;
+      display: none;
+    }
+
+    .btn-form:hover {
+      background: #1e7e34;
+    }
+
     #hasil {
       margin-top: 20px;
       font-weight: bold;
       color: #333;
+      min-height: 30px;
     }
-    #formCutiBtn {
-      display: none;
-      background-color: #4caf50;
-    }
-    #formCutiBtn:hover {
-      background-color: #388e3c;
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
 </head>
 <body>
 
   <div class="container">
-    <!-- 🔹 Logo -->
-   <img src="https://raw.githubusercontent.com/hong-ark/req-cuti/main/Logo.jpg" alt="Logo EDP" class="logo">
+    <!-- Kalau ada logo, ganti src="LOGO.png" -->
+    <!-- <img src="LOGO.png" alt="Logo" class="logo"> -->
 
-
-    <!-- 🔹 Judul -->
     <h2>INPUT NIK SEBELUM REQUEST</h2>
 
-    <!-- 🔹 Input NIK -->
     <label for="nik">Masukkan NIK:</label>
-    <input type="text" id="nik" placeholder="Contoh: 2012022847">
+    <input type="text" id="nik" placeholder="Contoh: 2012022847" />
 
-    <!-- 🔹 Tombol cek -->
-    <button onclick="cekNIK()">🔍 Cek Nama & Group</button>
+    <button class="btn-cek" onclick="cekNIK()">🔍 Cek Nama & Group</button>
 
-    <!-- 🔹 Hasil -->
     <div id="hasil"></div>
 
-    <!-- 🔹 Tombol lanjut -->
-    <button id="formCutiBtn" onclick="lanjutForm()">➡️ Lanjut ke Form REQUEST</button>
+    <button id="formCutiBtn" class="btn-form" onclick="lanjutForm()">➡️ Lanjut ke Form REQUEST</button>
   </div>
 
-  <script>
-    async function cekNIK() {
-      const nik = document.getElementById("nik").value.trim();
-      const hasil = document.getElementById("hasil");
-      const btnForm = document.getElementById("formCutiBtn");
+<script>
+async function cekNIK() {
+  const nik = document.getElementById("nik").value.trim();
+  const hasil = document.getElementById("hasil");
+  const btnForm = document.getElementById("formCutiBtn");
 
-      if (!nik) {
-        hasil.innerText = "⚠️ Silakan masukkan NIK.";
-        btnForm.style.display = "none";
-        return;
-      }
+  if (!nik) {
+    hasil.innerText = "⚠️ Silakan masukkan NIK.";
+    btnForm.style.display = "none";
+    return;
+  }
 
-      hasil.innerText = "🔄 Mencari data...";
-      btnForm.style.display = "none";
+  hasil.innerText = "🔄 Mencari data...";
+  btnForm.style.display = "none";
 
-      try {
-        const response = await fetch(
-          `https://script.google.com/macros/s/AKfycbz2Vcne0S9qUcVGCNan2ChqwcPdcqKbHVh3RdnCdK5e-UktyDu-uxVO_5uGccRQtctU/exec?nik=${nik}`
-        );
-        const data = await response.json();
+  try {
+    const response = await fetch(`https://script.google.com/macros/s/AKfycbz2Vcne0S9qUcVGCNan2ChqwcPdcqKbHVh3RdnCdK5e-UktyDu-uxVO_5uGccRQtctU/exec?nik=${nik}`);
+    const data = await response.json();
 
-        if (data.nama && data.group) {
-          hasil.innerHTML = `
-            ✅ Nama: <strong>${data.nama}</strong><br>
-            📌 Group: <strong>${data.group}</strong>
-          `;
-          btnForm.style.display = "block";
-          btnForm.dataset.nama = data.nama;
-          btnForm.dataset.nik = nik;
-          btnForm.dataset.group = data.group;
-        } else {
-          hasil.innerText = "❌ NIK tidak ditemukan di database.";
-        }
-      } catch (err) {
-        hasil.innerText = "❌ Gagal mengambil data.";
-        console.error(err);
-      }
+    if (data.nama && data.group) {
+      hasil.innerHTML = `
+        ✅ Nama: <strong>${data.nama}</strong><br>
+        📌 Group: <strong>${data.group}</strong>
+      `;
+      btnForm.style.display = "block";
+      btnForm.dataset.nama = data.nama;
+      btnForm.dataset.nik = nik;
+      btnForm.dataset.group = data.group;
+    } else {
+      hasil.innerText = "❌ NIK tidak ditemukan di database.";
     }
+  } catch (err) {
+    hasil.innerText = "❌ Gagal mengambil data.";
+    console.error(err);
+  }
+}
 
-    function lanjutForm() {
-      const btn = document.getElementById("formCutiBtn");
-      const nama = encodeURIComponent(btn.dataset.nama);
-      const nik = encodeURIComponent(btn.dataset.nik);
-      const group = encodeURIComponent(btn.dataset.group);
+function lanjutForm() {
+  const btn = document.getElementById("formCutiBtn");
+  const nama = encodeURIComponent(btn.dataset.nama);
+  const nik = encodeURIComponent(btn.dataset.nik);
+  const group = encodeURIComponent(btn.dataset.group);
 
-      // Link Google Form kamu
-      const formURL = "https://docs.google.com/forms/d/e/1FAIpQLSeoJsdvN7htQSgUjDbT6I5StR1y0zLyFXM46-ZuLvO80D89bQ/viewform";
+  const formURL = "https://docs.google.com/forms/d/e/1FAIpQLSeoJsdvN7htQSgUjDbT6I5StR1y0zLyFXM46-ZuLvO80D89bQ/viewform";
+  const prefillURL = `${formURL}?entry.448590851=${nik}&entry.1346383944=${nama}&entry.1841657487=${group}`;
 
-      // Prefill entry id masing-masing
-      const prefillURL = `${formURL}?entry.448590851=${nik}&entry.1346383944=${nama}&entry.1841657487=${group}`;
-
-      window.location.href = prefillURL;
-    }
-  </script>
+  window.location.href = prefillURL;
+}
+</script>
 
 </body>
 </html>
