--- a/req-cuti.html
+++ b/req-cuti.html
@@ -13,7 +13,6 @@
       align-items: center;
       background: linear-gradient(135deg, #6dd5ed, #2193b0);
     }
-
     .container {
       background: #fff;
       padding: 40px 50px;
@@ -24,12 +23,6 @@
       max-width: 95%;
       animation: fadeIn 0.6s ease-in-out;
     }
-
-    .logo {
-      width: 100px;
-      margin-bottom: 15px;
-    }
-
     h2 {
       margin-bottom: 25px;
       font-size: 22px;
@@ -38,7 +31,6 @@
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
-
     label {
       display: block;
       margin-bottom: 8px;
@@ -46,7 +38,6 @@
       font-weight: bold;
       color: #444;
     }
-
     input {
       width: 100%;
       padding: 12px;
@@ -57,13 +48,11 @@
       box-sizing: border-box;
       transition: border 0.3s;
     }
-
     input:focus {
       border-color: #2193b0;
       outline: none;
       box-shadow: 0 0 5px rgba(33, 147, 176, 0.5);
     }
-
     button {
       width: 100%;
       padding: 12px;
@@ -75,33 +64,23 @@
       cursor: pointer;
       transition: all 0.3s;
     }
-
     .btn-cek {
       background: #2193b0;
       color: #fff;
     }
-
-    .btn-cek:hover {
-      background: #18657a;
-    }
-
+    .btn-cek:hover { background: #18657a; }
     .btn-form {
       background: #28a745;
       color: #fff;
       display: none;
     }
-
-    .btn-form:hover {
-      background: #1e7e34;
-    }
-
+    .btn-form:hover { background: #1e7e34; }
     #hasil {
       margin-top: 20px;
       font-weight: bold;
       color: #333;
       min-height: 30px;
     }
-
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(-20px); }
       to { opacity: 1; transform: translateY(0); }
@@ -111,9 +90,6 @@
 <body>
 
   <div class="container">
-    <!-- Kalau ada logo, ganti src="LOGO.png" -->
-    <!-- <img src="LOGO.png" alt="Logo" class="logo"> -->
-
     <h2>INPUT NIK SEBELUM REQUEST</h2>
 
     <label for="nik">Masukkan NIK:</label>
@@ -127,6 +103,9 @@
   </div>
 
 <script>
+// Ganti dengan URL Apps Script untuk validasi NIK dari sheet "database"
+const apiURL = "https://script.google.com/macros/s/AKfycbz2Vcne0S9qUcVGCNan2ChqwcPdcqKbHVh3RdnCdK5e-UktyDu-uxVO_5uGccRQtctU/exec?nik=";
+
 async function cekNIK() {
   const nik = document.getElementById("nik").value.trim();
   const hasil = document.getElementById("hasil");
@@ -142,7 +121,7 @@ async function cekNIK() {
   btnForm.style.display = "none";
 
   try {
-    const response = await fetch(`https://script.google.com/macros/s/AKfycbz2Vcne0S9qUcVGCNan2ChqwcPdcqKbHVh3RdnCdK5e-UktyDu-uxVO_5uGccRQtctU/exec?nik=${nik}`);
+    const response = await fetch(apiURL + nik);
     const data = await response.json();
 
     if (data.nama && data.group) {
@@ -169,10 +148,9 @@ function lanjutForm() {
   const nik = encodeURIComponent(btn.dataset.nik);
   const group = encodeURIComponent(btn.dataset.group);
 
-  const formURL = "https://docs.google.com/forms/d/e/1FAIpQLSeoJsdvN7htQSgUjDbT6I5StR1y0zLyFXM46-ZuLvO80D89bQ/viewform";
-  const prefillURL = `${formURL}?entry.448590851=${nik}&entry.1346383944=${nama}&entry.1841657487=${group}`;
-
-  window.location.href = prefillURL;
+  // arahkan ke halaman request tanggal (harus ada file request-tanggal.html)
+  const targetURL = `form-request.html?nik=${nik}&nama=${nama}&group=${group}`;
+  window.location.href = targetURL;
 }
 </script>
 
